# cssh_game

./: .gitignore
client/: .gitignore  fix_wolf.sh  globals.d.ts  index.html  package-lock.json  package.json  style.css  tsconfig.json  webpack.config.js
client/src/: constant.ts  game_data.ts  game_state.ts  index.ts  main.ts
client/src/object/: bullet.ts  user.ts
client/src/objects/: back_button.ts  bullet.ts  prepare_button.ts  room_data_shower.ts  user.ts
client/src/server_data/: room.ts  start.ts
client/src/states/: boot.ts  index.ts  room.ts  start.ts
gimp/: kenny.xcf  ready.xcf  refresh.xcf  room.xcf  room2.xcf  room3.xcf  waiting.xcf
problems/: problem.toml
server/: Cargo.toml
server/src/: common.rs  event.rs  logger.rs  macro_utils.rs  main.rs  websocket_logic.rs  ws.rs
server/src/game/: common.rs  common_trait.rs  constant.rs  data_struct.rs  event.rs  game_runner.rs  init.rs  lobby.rs  macro_utils.rs  mod.rs  mod.rs.old  output.rs  point.rs  problem.rs  room.rs  runner.rs  state.rs  user_send.rs  utils.rs
server/src/game/game_runner/: constant.rs  fire.rs  health.rs  mod.rs  player.rs  problem.rs
server/src/game/runner/: health.rs  mod.rs  point.rs
server/src/ws/: counter.rs  mod.rs  sink_stream.rs  wrapped_sender.rs
