[package]
authors = ["meteor <bobogei81123@gmail.com>"]
name = "server"
version = "0.1.0"

[dependencies]
byteorder = "1.1.0"
chrono = "0.4.0"
either = "1.2.0"
futures = "0.1.16"
futures-cpupool = "0.1.6"
itertools = "0.7.2"
lazy_static = "0.2.9"
rand = "0.3.16"
rocket = "0.3.3"
rocket_codegen = "0.3.3"
serde = "1.0.15"
serde_derive = "1.0.15"
serde_json = "1.0.3"
slog = "2.0.12"
slog-async = "2.1.0"
slog-envlogger = "2.0.0"
slog-term = "2.2.0"
tokio-core = "0.1.9"
tokio-timer = "0.1.2"
toml = "0.4.5"
websocket = "0.20.2"
clippy = {version = "*", optional = true}
