[package]
authors = ["meteor <bobogei81123@gmail.com>"]
name = "server"
version = "0.1.0"

[dependencies]
boolinator = "2.4.0"
byteorder = "1.1.0"
chrono = "0.4.0"
either = "1.2.0"
futures = "0.1.16"
futures-cpupool = "0.1.6"
itertools = "0.7.2"
lazy_static = "0.2.9"
iron = "0.5.1"
mount = "0.3.0"
rand = "0.3.16"
serde = "1.0.15"
serde_derive = "1.0.15"
serde_json = "1.0.3"
slog = "2.0.12"
slog-async = "2.1.0"
slog-envlogger = "2.0.0"
slog-term = "2.2.0"
staticfile = "0.4.0"
tokio-core = "0.1.9"
tokio-timer = "0.1.2"
toml = "0.4.5"
websocket = "0.20.2"

[dependencies.clippy]
optional = true
version = "*"

[features]
default = ["staticfile/cache"]
